--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,41 @@
   font-size: 25px;
   font-weight: 800;
 }
+
+.Nav-colors {
+  display: flex;
+  flex-direction: column;
+}
+
+li {
+  list-style: none;
+}
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+  height: 100vh;
+  background-color: aliceblue;
+}
+
+.Form input {
+  margin: 10px;
+}
+
+a.active {
+  color: green;
+  font-size: 20px;
+}
+
+.Color {
+  height: 100vh;
+  width: 100vw;
+}
+
+.Flex-column {
+  display: flex;
+  flex-direction: column;
+}
